--- a/index.html
+++ b/index.html
@@ -70,5 +70,6 @@
 </head>
   <body class="bg-offwhite text-charcoal antialiased selection:bg-gold selection:text-white">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
